# GeneralsGameCode

./: .gitattributes  .gitignore  CMakePresets.json  extract_flags.py  stub_cmake.py
.github/workflows/: build.yml
Generals/Code/GameEngine/Source/GameNetwork/: GameSpy.cpp
Generals/Code/Main/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Include/Common/: BorderColors.h  DamageFX.h  GameAudio.h  GameCommon.h  GameMemory.h  PerfTimer.h  Player.h  STLTypedefs.h  StackDump.h  Team.h  ThingFactory.h
GeneralsMD/Code/GameEngine/Include/GameClient/: FXList.h  GameClient.h  ParticleSys.h  WindowVideoManager.h
GeneralsMD/Code/GameEngine/Include/GameLogic/: Armor.h  GameLogic.h  PartitionManager.h
GeneralsMD/Code/GameEngine/Include/Precompiled/: PreRTS.h
GeneralsMD/Code/GameEngine/Source/Common/: MessageStream.cpp  PerfTimer.cpp  RandomValue.cpp
GeneralsMD/Code/GameEngine/Source/Common/Audio/: GameSpeech.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/: LanguageFilter.cpp
GeneralsMD/Code/GameEngine/Source/GameNetwork/: GUIUtil.cpp  NetPacket.cpp
GeneralsMD/Code/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
GeneralsMD/Code/Libraries/Include/Lib/: BaseType.h
GeneralsMD/Code/Libraries/Source/EABrowserDispatch/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/profile/: CMakeLists.txt  profile_funclevel.h
GeneralsMD/Code/Main/: CMakeLists.txt  WinMain.cpp
GeneralsMD/Code/Tools/PATCHGET/: CMakeLists.txt
GeneralsMD/Code/Tools/WorldBuilder/src/: WaypointOptions.cpp
cmake/: lzhl.cmake  zlib.cmake
(+32 files in other folders)
